Re #1256 - changed logic to detect the topmost/bottom-most visible nodes so it no longer depends on document.elementFromPoint (which only works for on-screen elements)

--- a/portal2/src/main/webapp/themes/default/js/eu/europeana/EuHierarchy/style-overrides.css
+++ b/portal2/src/main/webapp/themes/default/js/eu/europeana/EuHierarchy/style-overrides.css
@@ -83,6 +83,11 @@
 	line-height: 2em;
 }
 
+.hierarchy-next a,
+.hierarchy-prev a{
+	cursor: pointer;
+}
+
 .hierarchy-title .count,
 .hierarchy-next .count,
 .hierarchy-prev .count{
